--- a/Test/pubspec.yaml
+++ b/Test/pubspec.yaml
@@ -90,7 +90,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/launch_icon.png"
+  image_path: "assets/images/RC_logo_color.png"
   min_sdk_android: 21
 
   flutter_lints: ^2.0.0
@@ -104,6 +104,6 @@ flutter:
     - assets/svg/
 
   fonts:
-    - family: JosefinSans
+    - family: Almarai
       fonts:
-        - asset: assets/fonts/JosefinSans-Regular.ttf
+        - asset: assets/fonts/Almarai-Regular.ttf
